force-app/main/default/objects/UtFC_Film_Event__c/UtFC_Film_Event__c.object-meta.xml
<CustomObject>
    <label>UtFC Film Event</label>
    <nameField>
        <label>Film Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UtFC Film Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>