force-app/main/default/objects/UtFC_Film_Event__c/fields/Additional_Development_Event__c.field-meta.xml
<CustomField>
    <fullName>Additional_Development_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to other Event (Campaign) associated with this screening? e.g. Dinner?  Lecture? Etc?</inlineHelpText>
    <label>Additional Development Event (Campaign)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events (Additional Development Event)</relationshipLabel>
    <relationshipName>UtFC_Film_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>