force-app/main/default/objects/UtFC_Film_Event__c/fields/Additional_Events__c.field-meta.xml
<CustomField>
    <fullName>Additional_Events__c</fullName>
    <label>Additional Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>