force-app/main/default/objects/UtFC_Film_Event__c/fields/Additional_Info_for_Web_page__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_for_Web_page__c</fullName>
    <label>Additional Info for Web page</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>