force-app/main/default/objects/UtFC_Film_Event__c/fields/Addtl_Guest_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Guest_Attachments__c</fullName>
    <label>Addtl Guest Attachments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>