force-app/main/default/objects/UtFC_Film_Event__c/fields/Asana_Task_ID_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task_ID_Calendar__c</fullName>
    <label>Asana Task ID - Full External Events Cal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>