force-app/main/default/objects/UtFC_Film_Event__c/fields/Attending_School__c.field-meta.xml
<CustomField>
    <fullName>Attending_School__c</fullName>
    <label>Attending School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>