force-app/main/default/objects/UtFC_Film_Event__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <label>Awards</label>
    <type>TextArea</type>
</CustomField>