force-app/main/default/objects/UtFC_Film_Event__c/fields/Captions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Captions_Requested__c</fullName>
    <label>Captions Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>