force-app/main/default/objects/UtFC_Film_Event__c/fields/CineConductor__c.field-meta.xml
<CustomField>
    <fullName>CineConductor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CineConductor</label>
    <type>Checkbox</type>
</CustomField>