force-app/main/default/objects/UtFC_Film_Event__c/fields/Closed_Caption__c.field-meta.xml
<CustomField>
    <fullName>Closed_Caption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Caption</label>
    <type>Checkbox</type>
</CustomField>