force-app/main/default/objects/UtFC_Film_Event__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this screening confirmed.</description>
    <inlineHelpText>Once this is checked a staff wide email will be sent announcing the confirmed screening.</inlineHelpText>
    <label>Confirmed?</label>
    <type>Checkbox</type>
</CustomField>