force-app/main/default/objects/UtFC_Film_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events</relationshipLabel>
    <relationshipName>UtFC_Film_Events</relationshipName>
    <type>Lookup</type>
</CustomField>