force-app/main/default/objects/UtFC_Film_Event__c/fields/Day_of_Week_Formula__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Formula__c</fullName>
    <formula>CASE(WEEKDAY(DATEVALUE(Date_and_Time__c)), 
1,&quot;Sunday&quot;, 
2,&quot;Monday&quot;, 
3,&quot;Tuesday&quot;, 
4,&quot;Wednesday&quot;, 
5,&quot;Thursday&quot;, 
6,&quot;Friday&quot;, 
7,&quot;Saturday&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week Formula</label>
    <type>Text</type>
</CustomField>