force-app/main/default/objects/UtFC_Film_Event__c/fields/Description_for_Web__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Web__c</fullName>
    <label>Description for Web</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>