force-app/main/default/objects/UtFC_Film_Event__c/fields/Descriptive_Audio__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Audio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descriptive Audio</label>
    <type>Checkbox</type>
</CustomField>