force-app/main/default/objects/UtFC_Film_Event__c/fields/Development_Pass__c.field-meta.xml
<CustomField>
    <fullName>Development_Pass__c</fullName>
    <label>Development Comp or Pass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>