force-app/main/default/objects/UtFC_Film_Event__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>