force-app/main/default/objects/UtFC_Film_Event__c/fields/Drive_in_Attrition_Rate__c.field-meta.xml
<CustomField>
    <fullName>Drive_in_Attrition_Rate__c</fullName>
    <formula>Drive_In_of_vehicles__c /  of_vehicles_registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive-in: Attrition Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>