force-app/main/default/objects/UtFC_Film_Event__c/fields/Drive_In_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>Drive_In_of_vehicles__c</fullName>
    <label>Drive-In: # of vehicles</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>