force-app/main/default/objects/UtFC_Film_Event__c/fields/Edited__c.field-meta.xml
<CustomField>
    <fullName>Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edited</label>
    <type>Checkbox</type>
</CustomField>