force-app/main/default/objects/UtFC_Film_Event__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this film be considered for educational use?</description>
    <inlineHelpText>Could this screening be considered by the education team?</inlineHelpText>
    <label>Education?</label>
    <type>Checkbox</type>
</CustomField>