force-app/main/default/objects/UtFC_Film_Event__c/fields/Education_Notes__c.field-meta.xml
<CustomField>
    <fullName>Education_Notes__c</fullName>
    <description>Notes for Education Department to consider for this screening.</description>
    <label>Education Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>