force-app/main/default/objects/UtFC_Film_Event__c/fields/Education_Update_field_HIDDEN__c.field-meta.xml
<CustomField>
    <fullName>Education_Update_field_HIDDEN__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Education Update field HIDDEN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>