force-app/main/default/objects/UtFC_Film_Event__c/fields/Event_Partner__c.field-meta.xml
<CustomField>
    <fullName>Event_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Film Events</relationshipLabel>
    <relationshipName>UtFC_Film_Events</relationshipName>
    <type>Lookup</type>
</CustomField>