force-app/main/default/objects/UtFC_Film_Event__c/fields/Event_Reception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Reception_Notes__c</fullName>
    <label>Event/Reception Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>