force-app/main/default/objects/UtFC_Film_Event__c/fields/Facebook_Event_Views__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Event_Views__c</fullName>
    <label>Facebook Event Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>