force-app/main/default/objects/UtFC_Film_Event__c/fields/Film_Still_1__c.field-meta.xml
<CustomField>
    <fullName>Film_Still_1__c</fullName>
    <label>Film Still 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>