force-app/main/default/objects/UtFC_Film_Event__c/fields/Film_Website__c.field-meta.xml
<CustomField>
    <fullName>Film_Website__c</fullName>
    <label>Link to Film Materials Website</label>
    <type>Url</type>
</CustomField>