force-app/main/default/objects/UtFC_Film_Event__c/fields/Fiscal_Sponsored_Film__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsored_Film__c</fullName>
    <label>Fiscal Sponsored Film?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>