force-app/main/default/objects/UtFC_Film_Event__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <label>General Notes</label>
    <length>650</length>
    <type>LongTextArea</type>
</CustomField>