force-app/main/default/objects/UtFC_Film_Event__c/fields/Guest_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_s_Name__c</fullName>
    <label>Guest(s) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>