force-app/main/default/objects/UtFC_Film_Event__c/fields/Guest_Type__c.field-meta.xml
<CustomField>
    <fullName>Guest_Type__c</fullName>
    <label>Guest Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>