force-app/main/default/objects/UtFC_Film_Event__c/fields/Instagram_Comments__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Comments__c</fullName>
    <label>Instagram Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>