force-app/main/default/objects/UtFC_Film_Event__c/fields/Instructor_Email_AF__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Email_AF__c</fullName>
    <label>Instructor Email</label>
    <type>Email</type>
</CustomField>