force-app/main/default/objects/UtFC_Film_Event__c/fields/Instructor_Phone_AF__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Phone_AF__c</fullName>
    <label>Instructor Phone</label>
    <type>Phone</type>
</CustomField>