force-app/main/default/objects/UtFC_Film_Event__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest/Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activism/Protest</fullName>
            </value>
            <value>
                <fullName>Addiction/Drug Abuse</fullName>
            </value>
            <value>
                <fullName>Adventure/Travel/Exploration</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>African-American</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Animals/Nature</fullName>
            </value>
            <value>
                <fullName>Animated Films</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Arts/Architecture/Literature</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Asian American</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Business/Economy</fullName>
            </value>
            <value>
                <fullName>Cities</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Crime/Incarceration/Law</fullName>
            </value>
            <value>
                <fullName>Death and Dying</fullName>
            </value>
            <value>
                <fullName>Disabilities</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment/Sustainability</fullName>
            </value>
            <value>
                <fullName>European</fullName>
            </value>
            <value>
                <fullName>Family/Parenting</fullName>
            </value>
            <value>
                <fullName>Films on Film</fullName>
            </value>
            <value>
                <fullName>Food/Drinks</fullName>
            </value>
            <value>
                <fullName>Health &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Human Rights/Social Justice</fullName>
            </value>
            <value>
                <fullName>Indigenous Peoples</fullName>
            </value>
            <value>
                <fullName>Jewish/Judaism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>