force-app/main/default/objects/UtFC_Film_Event__c/fields/Link_to_Facebook_Event__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Facebook_Event__c</fullName>
    <label>Link to Facebook Event</label>
    <type>Url</type>
</CustomField>