force-app/main/default/objects/UtFC_Film_Event__c/fields/Local_Director__c.field-meta.xml
<CustomField>
    <fullName>Local_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Director</label>
    <type>Checkbox</type>
</CustomField>