force-app/main/default/objects/UtFC_Film_Event__c/fields/Long_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Long_Synopsis__c</fullName>
    <label>Long Synopsis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>