force-app/main/default/objects/UtFC_Film_Event__c/fields/Member_Rental_Discount__c.field-meta.xml
<CustomField>
    <fullName>Member_Rental_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Rental Discount</label>
    <type>Checkbox</type>
</CustomField>