force-app/main/default/objects/UtFC_Film_Event__c/fields/Non_Paid_Attendants__c.field-meta.xml
<CustomField>
    <fullName>Non_Paid_Attendants__c</fullName>
    <label>Non Paid Attendants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>