force-app/main/default/objects/UtFC_Film_Event__c/fields/Non_screening_type_event__c.field-meta.xml
<CustomField>
    <fullName>Non_screening_type_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-screening type event</label>
    <type>Checkbox</type>
</CustomField>