force-app/main/default/objects/UtFC_Film_Event__c/fields/Number_of_Post_Film_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Post_Film_Participants__c</fullName>
    <inlineHelpText>How many guests will be participating in the post film discussion?</inlineHelpText>
    <label>Number of Post Film Participants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>