force-app/main/default/objects/UtFC_Film_Event__c/fields/Number_of_sessions_AF__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sessions_AF__c</fullName>
    <description>How many sessions/weeks are included in this workshop?</description>
    <inlineHelpText>Number of total sessions in workshop</inlineHelpText>
    <label>Number of sessions in workshop</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>