force-app/main/default/objects/UtFC_Film_Event__c/fields/of_vehicles_registered__c.field-meta.xml
<CustomField>
    <fullName>of_vehicles_registered__c</fullName>
    <label>Drive-in: # of vehicles registered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>