force-app/main/default/objects/UtFC_Film_Event__c/fields/One_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>One_Line_Description__c</fullName>
    <label>One Line Description</label>
    <length>256</length>
    <type>Html</type>
</CustomField>