force-app/main/default/objects/UtFC_Film_Event__c/fields/Open_Caption__c.field-meta.xml
<CustomField>
    <fullName>Open_Caption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Caption</label>
    <type>Checkbox</type>
</CustomField>