force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach__c.field-meta.xml
<CustomField>
    <fullName>Outreach__c</fullName>
    <label>Outreach Coordinator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>