force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Outreach Campaign for this screening.</inlineHelpText>
    <label>Outreach Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events (Outreach Campaign)</relationshipLabel>
    <relationshipName>UtFC_Film_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>