force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach_Contact__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Film Events (Outreach Contact)</relationshipLabel>
    <relationshipName>UtFC_Film_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>