force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach_Notes_and_links__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notes_and_links__c</fullName>
    <label>Outreach Notes and links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>