force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization or individual that is helping promote this screening.</description>
    <inlineHelpText>Organization or individual that is helping promote this screening.</inlineHelpText>
    <label>Outreach Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Film Events (Outreach Partner Account)</relationshipLabel>
    <relationshipName>UtFC_Film_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>