force-app/main/default/objects/UtFC_Film_Event__c/fields/Outreach_partners__c.field-meta.xml
<CustomField>
    <fullName>Outreach_partners__c</fullName>
    <label>Outreach partners</label>
    <type>TextArea</type>
</CustomField>