force-app/main/default/objects/UtFC_Film_Event__c/fields/Partner_notes_and_comments__c.field-meta.xml
<CustomField>
    <fullName>Partner_notes_and_comments__c</fullName>
    <label>Partner notes and comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>