force-app/main/default/objects/UtFC_Film_Event__c/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <label>Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3Form</fullName>
            </value>
            <value>
                <fullName>Aaron Events</fullName>
            </value>
            <value>
                <fullName>ACLU of Utah</fullName>
            </value>
            <value>
                <fullName>AIA of Utah&apos;s Young Architects Forum</fullName>
            </value>
            <value>
                <fullName>Allied PR</fullName>
            </value>
            <value>
                <fullName>American Documentary</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>American Institute of Architects of Utah</fullName>
            </value>
            <value>
                <fullName>American Planning Association of Utah</fullName>
            </value>
            <value>
                <fullName>American West Center</fullName>
            </value>
            <value>
                <fullName>Anne Makepeace Productions</fullName>
            </value>
            <value>
                <fullName>Architecture Week</fullName>
            </value>
            <value>
                <fullName>Asia Center</fullName>
            </value>
            <value>
                <fullName>Avrec Art House</fullName>
            </value>
            <value>
                <fullName>AWWA</fullName>
            </value>
            <value>
                <fullName>B98.7</fullName>
            </value>
            <value>
                <fullName>Barbara L. &amp; Norman C. Tanner Center for Nonviolent Human Rights Advocacy</fullName>
            </value>
            <value>
                <fullName>Bluff Town Council</fullName>
            </value>
            <value>
                <fullName>Boulder Arts Council</fullName>
            </value>
            <value>
                <fullName>Brazilian Cultural Festival</fullName>
            </value>
            <value>
                <fullName>Broadway</fullName>
            </value>
            <value>
                <fullName>Brolly Arts</fullName>
            </value>
            <value>
                <fullName>City Weekly</fullName>
            </value>
            <value>
                <fullName>College of Humanities at the U of U</fullName>
            </value>
            <value>
                <fullName>College of Social Work</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Confucius Institute</fullName>
            </value>
            <value>
                <fullName>Creative Capital</fullName>
            </value>
            <value>
                <fullName>Cucina Nassi</fullName>
            </value>
            <value>
                <fullName>Danielle Byron Henry Migraine Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>