force-app/main/default/objects/UtFC_Film_Event__c/fields/Percent_of_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Capacity__c</fullName>
    <formula>Total_Attendants__c/Venue_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>