force-app/main/default/objects/UtFC_Film_Event__c/fields/Photographer_contact_info__c.field-meta.xml
<CustomField>
    <fullName>Photographer_contact_info__c</fullName>
    <label>Photographer contact info</label>
    <type>TextArea</type>
</CustomField>