force-app/main/default/objects/UtFC_Film_Event__c/fields/Photographer_needed__c.field-meta.xml
<CustomField>
    <fullName>Photographer_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photographer needed?</label>
    <type>Checkbox</type>
</CustomField>