force-app/main/default/objects/UtFC_Film_Event__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Person of color?</inlineHelpText>
    <label>POC?</label>
    <type>Checkbox</type>
</CustomField>