force-app/main/default/objects/UtFC_Film_Event__c/fields/Post_During_film_dinner__c.field-meta.xml
<CustomField>
    <fullName>Post_During_film_dinner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will there be a dinner either post or during the film?</inlineHelpText>
    <label>Post/During film dinner?</label>
    <type>Checkbox</type>
</CustomField>