force-app/main/default/objects/UtFC_Film_Event__c/fields/Post_Film_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Post_Film_Discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this film have a post film discussion?</inlineHelpText>
    <label>Post Film Discussion?</label>
    <type>Checkbox</type>
</CustomField>