force-app/main/default/objects/UtFC_Film_Event__c/fields/Postponed_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Postponed_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This screening was cancelled or postponed due to COVID19 or other reason.</inlineHelpText>
    <label>Postponed/Cancelled</label>
    <type>Checkbox</type>
</CustomField>