force-app/main/default/objects/UtFC_Film_Event__c/fields/Pre_Screening_Event_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screening_Event_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Screening Event (Campaign)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events (Pre-Screening Event (Campaign))</relationshipLabel>
    <relationshipName>UtFC_Film_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>